# 3D-Bone-Segmentation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  enhanced_mayavi_widget.py  main.py  main_window_functions.py  main_window_init.py  mayavi_widget.py  pyproject.toml  requirements.txt  setup.py  windowing_tool.py
scripts/: run_app.py
src/bone_segmentation/: __init__.py
src/bone_segmentation/core/: __init__.py  image_processing.py
src/bone_segmentation/ui/: __init__.py  image_viewer.py  main_window_functions.py  main_window_init.py
src/bone_segmentation/visualization/: __init__.py
tests/: __init__.py  test_core.py
