[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bone-segmentation-3d"
version = "1.0.0"
description = "A comprehensive medical imaging application for 3D bone segmentation and visualization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Dawit Welegebriel", email = "dawitf.welegebriel@gmail.com"}
]
keywords = [
    "medical-imaging",
    "3d-visualization", 
    "bone-segmentation",
    "dicom",
    "ct-scan",
    "mayavi",
    "vtk",
    "pyqt5"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "PyQt5>=5.15.0",
    "SimpleITK>=2.0.0",
    "scikit-image>=0.19.0",
    "numpy-stl>=2.16.0",
    "traits>=6.0.0",
    "traitsui>=7.0.0",
    "pyface>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.scripts]
bone-segmentation-3d = "main:main"

[project.urls]
Homepage = "https://github.com/DawitFsaha/3D-Bone-Segmentation"
Documentation = "https://github.com/DawitFsaha/3D-Bone-Segmentation#readme"
Repository = "https://github.com/DawitFsaha/3D-Bone-Segmentation"
Issues = "https://github.com/DawitFsaha/3D-Bone-Segmentation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
